
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
char *strmov(register char *dst, register const char *src)
{
   while ((*dst++ = *src++)) ;
     return dst-1;
}
